add Kubernetes scripts

--- a/Gateway/Dockerfile
+++ b/Gateway/Dockerfile
@@ -1,5 +1,8 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:6.0-bullseye-slim AS base
 WORKDIR /app
+EXPOSE 8081
+
+ENV ASPNETCORE_URLS=http://+:8081
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0-bullseye-slim AS build
 
@@ -13,4 +16,5 @@ RUN dotnet publish "Gateway.csproj" --no-restore -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=build /app/publish .
+USER 1000
 ENTRYPOINT ["dotnet", "Gateway.dll"]
