--- a/Gateway/Gateway.csproj
+++ b/Gateway/Gateway.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="6.0.5" />
     <PackageReference Include="IdentityModel" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.8" />
@@ -17,7 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="aspnetapp.pfx">
+    <None Update="Certificates\aspnetapp.pfx">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="DataProtection\key-60d7e46a-ec9d-404a-bb34-28f046d7a131.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
