--- a/Gateway/appsettings.Development.json
+++ b/Gateway/appsettings.Development.json
@@ -4,5 +4,73 @@
       "Default": "Debug",
       "Microsoft.AspNetCore": "Debug"
     }
-  }
+  },
+  "ReverseProxy": {
+    "Routes": {
+      "weatherapi-admin": {
+        "ClusterId": "weatherservice",
+        "AuthorizationPolicy": "admin",
+        "Match": {
+          "Path": "/api/admin/{**catch-all}"
+        }
+      },
+      "weatherapi-health": {
+        "ClusterId": "weatherservice",
+        "AuthorizationPolicy": "anonymous",
+        "Match": {
+          "Path": "/api/healthz"
+        }
+      },
+      "weatherapi-liveness": {
+        "ClusterId": "weatherservice",
+        "AuthorizationPolicy": "anonymous",
+        "Match": {
+          "Path": "/api/liveness"
+        }
+      },
+      "weatherapi": {
+        "ClusterId": "weatherservice",
+        "Match": {
+          "Path": "/api/{**catch-all}"
+        }
+      },
+      "weatherswagger": {
+        "ClusterId": "weatherservice",
+        "Match": {
+          "Path": "/swagger/{**catch-all}"
+        }
+      },
+      "weatherswagger2": {
+        "ClusterId": "weatherservice",
+        "Match": {
+          "Path": "/swagger"
+        }
+      },
+      "weatherapp": {
+        "ClusterId": "weatherapp",
+        "Match": {
+          "Path": "/{**catch-all}"
+        }
+      }
+    },
+    "Clusters": {
+      "weatherservice": {
+        "Destinations": {
+          "weatherservice-1": {
+            "Address": "http://localhost:5149/"
+          }
+        }
+      },
+      "weatherapp": {
+        "Destinations": {
+          "weatherapp-1": {
+            "Address": "http://localhost:5022/"
+          }
+        }
+      }
+    }
+  },
+  "Administrators": [
+    "admin@dev-28752567-admin.okta.com"
+  ]
 }
