--- a/Gateway/appsettings.json
+++ b/Gateway/appsettings.json
@@ -6,67 +6,13 @@
     }
   },
   "AllowedHosts": "*",
-  "ReverseProxy": {
-    "Routes": {
-      "weatherapi": {
-        "ClusterId": "weatherservice",
-        "AuthorizationPolicy": "default",
-        "Match": {
-          "Path": "/api/{**catch-all}"
-        }
-      },
-      "weatherswagger": {
-        "ClusterId": "weatherservice",
-        "AuthorizationPolicy": "default",
-        "Match": {
-          "Path": "/swagger/{**catch-all}"
-        }
-      },
-      "weatherswagger2": {
-        "ClusterId": "weatherservice",
-        "AuthorizationPolicy": "default",
-        "Match": {
-          "Path": "/swagger"
-        }
-      },
-      "weatherapp": {
-        "ClusterId": "weatherapp",
-        "AuthorizationPolicy": "default",
-        "Match": {
-          "Path": "/{**catch-all}"
-        }
-      }
-    },
-    "Clusters": {
-      "weatherservice": {
-        "Destinations": {
-          "weatherservice-1": {
-            "Address": "http://localhost:5149/"
-          }
-        }
-      },
-      "weatherapp": {
-        "Destinations": {
-          "weatherapp-1": {
-            "Address": "http://localhost:5022/"
-          }
-        }
-      }
-    }
-  },
-  "Kestrel": {
-    "Certificates": {
-      "Default": {
-        "Path": "aspnetapp.pfx",
-        "Password": "password"
-      }
-    }
-  },
   "IdentityServer": {
     "Authority": "https://dev-28752567.okta.com/oauth2/default",
+    "Audience": "api://default",
     "ClientId": "0oa6f14ttjMnCgP595d7",
     "ClientSecret": "ZmKFG2isF9z6r268XSDV3RWI08dM7TJTEx6oDA1a",
     "RedirectUri": "https://localhost:9090/signin-oidc",
     "IdentityProvider": "Okta"
-  }
+  },
+  "Administrators": []
 }
